<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Candidatos">

    <TextView
        android:id="@+id/design3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="16dp"
        android:text="@string/design"
        android:textColor="#373535"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candidateVotes" />

    <TextView
        android:id="@+id/election"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/election"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/votes"
        android:textColor="#332828"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candidateName" />

    <EditText
        android:id="@+id/candidateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/candidateVotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/name"
        android:textColor="#332828"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/election" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="413dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/third"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fourth"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fifth"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sixth"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/seventh"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/eighth"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>