<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Athletes">

    <TextView
        android:id="@+id/athletes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/athletes"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/athletes" />

    <EditText
        android:id="@+id/athleteName"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/time"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/athleteName" />

    <EditText
        android:id="@+id/athleteTime"
        android:layout_width="154dp"
        android:layout_height="46dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:numeric="decimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/athleteTime" />

    <TextView
        android:id="@+id/design4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="5dp"
        android:text="@string/design"
        android:textColor="#373535"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="414dp"
        android:layout_height="363dp"
        android:layout_marginTop="85dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton">

        <TextView
            android:id="@+id/zero"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/six"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/seven"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/eight"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/nine"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:textColor="#000000" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="52dp"
        android:text="@string/media"
        app:layout_constraintEnd_toStartOf="@+id/mediaShow"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dpShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="268dp"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mediaShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="268dp"
        android:text="@string/dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>